--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Welcome To | Bootstrap Based Admin Template - Material Design</title>
+    <title>STRONG ACTION</title>
     <!-- Favicon-->
     <link rel="icon" href="faviconBlue.png" type="image/x-icon">
 
@@ -37,6 +37,12 @@
 
     <!--Controller-->
     <script src="js/controller/campanhaCtrl.js"></script>
+
+    <!--Services-->
+    <script src="js/service/campanhaService.js"></script>
+
+    <!--Value-->
+    <script src="js/value/defaultUrl.js"></script>
 </head>
 
 <body class="theme-blue">
