Mais algumas telas

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,9 +37,15 @@
 
     <!--Controller-->
     <script src="js/controller/campanhaCtrl.js"></script>
+    <script src="js/controller/cargoCtrl.js"></script>
+    <script src="js/controller/formaPagamentoCtrl.js"></script>
+    <script src="js/controller/usuarioCtrl.js"></script>
 
-    <!--Services-->
+    <!--Service-->
     <script src="js/service/campanhaService.js"></script>
+    <script src="js/service/cargoService.js"></script>
+    <script src="js/service/formaPagamentoService.js"></script>
+    <script src="js/service/usuarioService.js"></script>
 
     <!--Value-->
     <script src="js/value/defaultUrl.js"></script>
@@ -122,7 +128,28 @@
                         </a>
                     </li>
 
-                    <li>
+                    <li class="active">
+                        <a href="#/cargo">
+                            <i class="material-icons">recent_actors</i>
+                            <span>Cargo</span>
+                        </a>
+                    </li>
+
+                    <li class="active">
+                        <a href="#/formaPagamento">
+                            <i class="material-icons">attach_money</i>
+                            <span>Formas de Pagamento</span>
+                        </a>
+                    </li>
+
+                    <li class="active">
+                        <a href="#/usuario">
+                            <i class="material-icons">account_circle</i>
+                            <span>Usuario</span>
+                        </a>
+                    </li>
+
+                    <!--<li>
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons">widgets</i>
                             <span>Widgets</span>
@@ -167,7 +194,7 @@
                                 </ul>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
             <!-- #Menu -->
