--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,12 +40,14 @@
     <script src="js/controller/cargoCtrl.js"></script>
     <script src="js/controller/formaPagamentoCtrl.js"></script>
     <script src="js/controller/usuarioCtrl.js"></script>
+    <script src="js/controller/dashboardCtrl.js"></script>
 
     <!--Service-->
     <script src="js/service/campanhaService.js"></script>
     <script src="js/service/cargoService.js"></script>
     <script src="js/service/formaPagamentoService.js"></script>
     <script src="js/service/usuarioService.js"></script>
+    <script src="js/service/dashboardService.js"></script>
 
     <!--Value-->
     <script src="js/value/defaultUrl.js"></script>
@@ -78,7 +80,7 @@
             <div class="navbar-header">
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="index.html">STRONG ACTION</a>
+                <a class="navbar-brand" href="#/dashboard">STRONG ACTION</a>
             </div>
             <!--<div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -115,7 +117,7 @@
                 <ul class="list">
                     <li class="header">MAIN NAVIGATION</li>
                     <li class="active">
-                        <a href="index.html">
+                        <a href="#/dashboard">
                             <i class="material-icons">dashboard</i>
                             <span>Dashboard</span>
                         </a>
