--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
 
     <!-- Bootstrap Core Css -->
-    <link href="plugins/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="plugins/bootstrap-3.3.7/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Bootstrap Select Css -->
+    <link href="plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
 
     <!-- Animation Css -->
     <link href="plugins/animate-css/animate.css" rel="stylesheet" />
@@ -22,15 +25,13 @@
     <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
     <link href="css/themes/all-themes.css" rel="stylesheet" />
 
-    <!-- JQuery DataTable Css -->
-    <link href="plugins/jquery-datatable/skin/bootstrap/css/dataTables.bootstrap.css" rel="stylesheet">
-
     <!-- Custom Css -->
     <link href="css/style.css" rel="stylesheet">
 
     <!--Libs-->
-    <script src="js/lib/angular.js"></script>
+    <script src="js/lib/angular1-5.js"></script>
     <script src="js/lib/angular-route.js"></script>
+    <script src="js/lib/dirPagination.js"></script>
 
     <!--App-->
     <script src="js/app.js"></script>
@@ -54,6 +55,10 @@
 
     <!--Value-->
     <script src="js/value/defaultUrl.js"></script>
+
+    <!--Util-->
+    <script src="js/utils/dateUtils.js"></script>
+
 </head>
 
 <body class="theme-blue">
@@ -85,11 +90,6 @@
                 <a href="javascript:void(0);" class="bars"></a>
                 <a class="navbar-brand" href="#/dashboard">STRONG ACTION</a>
             </div>
-            <!--<div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="pull-right"><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="material-icons">more_vert</i></a></li>
-                </ul>
-            </div>-->
         </div>
     </nav>
     <!-- #Top Bar -->
@@ -153,53 +153,6 @@
                             <span>Usuario</span>
                         </a>
                     </li>
-
-                    <!--<li>
-                        <a href="javascript:void(0);" class="menu-toggle">
-                            <i class="material-icons">widgets</i>
-                            <span>Widgets</span>
-                        </a>
-                        <ul class="ml-menu">
-                            <li>
-                                <a href="javascript:void(0);" class="menu-toggle">
-                                    <span>Cards</span>
-                                </a>
-                                <ul class="ml-menu">
-                                    <li>
-                                        <a href="#/campanha">Campanha</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Colored</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">No Header</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" class="menu-toggle">
-                                    <span>Infobox</span>
-                                </a>
-                                <ul class="ml-menu">
-                                    <li>
-                                        <a href="#">Infobox-1</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Infobox-2</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Infobox-3</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Infobox-4</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Infobox-5</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>-->
                 </ul>
             </div>
             <!-- #Menu -->
@@ -229,7 +182,7 @@
     <script src="plugins/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core Js -->
-    <script src="plugins/bootstrap/js/bootstrap.js"></script>
+    <script src="plugins/bootstrap-3.3.7/js/bootstrap.js"></script>
 
     <!-- Select Plugin Js -->
     <script src="plugins/bootstrap-select/js/bootstrap-select.js"></script>
@@ -240,20 +193,8 @@
     <!-- Waves Effect Plugin Js -->
     <script src="plugins/node-waves/waves.js"></script>
 
-    <!-- Jquery DataTable Plugin Js -->
-    <script src="plugins/jquery-datatable/jquery.dataTables.js"></script>
-    <script src="plugins/jquery-datatable/skin/bootstrap/js/dataTables.bootstrap.js"></script>
-    <script src="plugins/jquery-datatable/extensions/export/dataTables.buttons.min.js"></script>
-    <script src="plugins/jquery-datatable/extensions/export/buttons.flash.min.js"></script>
-    <script src="plugins/jquery-datatable/extensions/export/jszip.min.js"></script>
-    <script src="plugins/jquery-datatable/extensions/export/pdfmake.min.js"></script>
-    <script src="plugins/jquery-datatable/extensions/export/vfs_fonts.js"></script>
-    <script src="plugins/jquery-datatable/extensions/export/buttons.html5.min.js"></script>
-    <script src="plugins/jquery-datatable/extensions/export/buttons.print.min.js"></script>
-
     <!-- Custom Js -->
     <script src="js/template/admin.js"></script>
-    <script src="js/template/jquery-datatable.js"></script>
     <script src="js/template/demo.js"></script>
 </body>
 
