--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,6 +45,7 @@
     <script src="js/controller/formaPagamentoCtrl.js"></script>
     <script src="js/controller/usuarioCtrl.js"></script>
     <script src="js/controller/dashboardCtrl.js"></script>
+    <script src="js/controller/funcionarioCtrl.js"></script>
 
     <!--Service-->
     <script src="js/service/campanhaService.js"></script>
@@ -52,6 +53,7 @@
     <script src="js/service/formaPagamentoService.js"></script>
     <script src="js/service/usuarioService.js"></script>
     <script src="js/service/dashboardService.js"></script>
+    <script src="js/service/funcionarioService.js"></script>
 
     <!--Value-->
     <script src="js/value/defaultUrl.js"></script>
@@ -129,7 +131,14 @@
                     <li class="active">
                         <a href="#/campanha">
                             <i class="material-icons">ring_volume</i>
-                            <span>Campanha</span>
+                            <span>Campanhas</span>
+                        </a>
+                    </li>
+
+                    <li class="active">
+                        <a href="#/funcionario">
+                            <i class="material-icons">ring_volume</i>
+                            <span>Funcionarios</span>
                         </a>
                     </li>
 
