Algumas alterações e criação das telas de empresa

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,6 +46,7 @@
     <script src="js/controller/usuarioCtrl.js"></script>
     <script src="js/controller/dashboardCtrl.js"></script>
     <script src="js/controller/funcionarioCtrl.js"></script>
+    <script src="js/controller/empresaCtrl.js"></script>
 
     <!--Service-->
     <script src="js/service/campanhaService.js"></script>
@@ -54,6 +55,7 @@
     <script src="js/service/usuarioService.js"></script>
     <script src="js/service/dashboardService.js"></script>
     <script src="js/service/funcionarioService.js"></script>
+    <script src="js/service/empresaService.js"></script>
 
     <!--Value-->
     <script src="js/value/defaultUrl.js"></script>
@@ -153,6 +155,13 @@
                         <a href="#/formaPagamento">
                             <i class="material-icons">attach_money</i>
                             <span>Formas de Pagamento</span>
+                        </a>
+                    </li>
+
+                    <li class="active">
+                        <a href="#/empresa">
+                            <i class="material-icons">domain</i>
+                            <span>Empresa</span>
                         </a>
                     </li>
 
