--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,6 +47,7 @@
     <script src="js/controller/dashboardCtrl.js"></script>
     <script src="js/controller/funcionarioCtrl.js"></script>
     <script src="js/controller/empresaCtrl.js"></script>
+    <script src="js/controller/contribuinteCtrl.js"></script>
 
     <!--Service-->
     <script src="js/service/campanhaService.js"></script>
@@ -56,6 +57,7 @@
     <script src="js/service/dashboardService.js"></script>
     <script src="js/service/funcionarioService.js"></script>
     <script src="js/service/empresaService.js"></script>
+    <script src="js/service/contribuinteService.js"></script>
 
     <!--Value-->
     <script src="js/value/defaultUrl.js"></script>
@@ -169,6 +171,13 @@
                         <a href="#/usuario">
                             <i class="material-icons">account_circle</i>
                             <span>Usuario</span>
+                        </a>
+                    </li>
+
+                    <li class="active">
+                        <a href="#/contribuinte">
+                            <i class="material-icons">contacts</i>
+                            <span>Contribuinte</span>
                         </a>
                     </li>
                 </ul>
