--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,6 +32,7 @@
     <script src="js/lib/angular1-5.js"></script>
     <script src="js/lib/angular-route.js"></script>
     <script src="js/lib/dirPagination.js"></script>
+    <script src="js/lib/angular-locale_pt-br.js"></script>
 
     <!--App-->
     <script src="js/app.js"></script>
@@ -48,6 +49,7 @@
     <script src="js/controller/funcionarioCtrl.js"></script>
     <script src="js/controller/empresaCtrl.js"></script>
     <script src="js/controller/contribuinteCtrl.js"></script>
+    <script src="js/controller/doacaoCtrl.js"></script>
 
     <!--Service-->
     <script src="js/service/campanhaService.js"></script>
@@ -58,6 +60,7 @@
     <script src="js/service/funcionarioService.js"></script>
     <script src="js/service/empresaService.js"></script>
     <script src="js/service/contribuinteService.js"></script>
+    <script src="js/service/doacaoService.js"></script>
 
     <!--Value-->
     <script src="js/value/defaultUrl.js"></script>
@@ -129,6 +132,13 @@
                         <a href="#/dashboard">
                             <i class="material-icons">dashboard</i>
                             <span>Dashboard</span>
+                        </a>
+                    </li>
+
+                    <li class="active">
+                        <a href="#/doacao">
+                            <i class="material-icons">local_atm</i>
+                            <span>Doação</span>
                         </a>
                     </li>
 
