--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,8 @@
     <script src="js/lib/angular-route.js"></script>
     <script src="js/lib/dirPagination.js"></script>
     <script src="js/lib/angular-locale_pt-br.js"></script>
+    <script src="js/lib/Chart.js"></script>
+    <script src="js/lib/angular-chart.js"></script>
 
     <!--App-->
     <script src="js/app.js"></script>
@@ -232,6 +234,8 @@
 
     <!-- Waves Effect Plugin Js -->
     <script src="plugins/node-waves/waves.js"></script>
+
+    <!-- Morris Plugin Js -->
 
     <!-- Custom Js -->
     <script src="js/template/admin.js"></script>
