--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -153,7 +153,7 @@
 
                     <li class="active">
                         <a href="#/funcionario">
-                            <i class="material-icons">ring_volume</i>
+                            <i class="material-icons">group</i>
                             <span>Funcionarios</span>
                         </a>
                     </li>
