--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,6 +35,7 @@
     <script src="js/lib/angular-locale_pt-br.js"></script>
     <script src="js/lib/Chart.js"></script>
     <script src="js/lib/angular-chart.js"></script>
+    <script src="js/lib/mask.js"></script>
 
     <!--App-->
     <script src="js/app.js"></script>
