--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,33 +9,9 @@
     <!-- Favicon-->
     <link rel="icon" href="faviconBlue.png" type="image/x-icon">
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
-
-    <!-- Bootstrap Core Css -->
-    <link href="plugins/bootstrap-3.3.7/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Bootstrap Select Css -->
-    <link href="plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
-
-    <!-- Animation Css -->
-    <link href="plugins/animate-css/animate.css" rel="stylesheet" />
-
-    <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
-    <link href="css/themes/all-themes.css" rel="stylesheet" />
-
-    <!-- Custom Css -->
-    <link href="css/style.css" rel="stylesheet">
-
-    <!--Libs-->
-    <script src="js/lib/angular1-5.js"></script>
-    <script src="js/lib/angular-route.js"></script>
-    <script src="js/lib/dirPagination.js"></script>
-    <script src="js/lib/angular-locale_pt-br.js"></script>
-    <script src="js/lib/Chart.js"></script>
-    <script src="js/lib/angular-chart.js"></script>
-    <script src="js/lib/mask.js"></script>
+    <!--Libs gerenciadas via wro4j-->
+    <script src="/wro/wro4j.js"></script>
+    <link rel="stylesheet" href="/wro/wro4j.css">
 
     <!--App-->
     <script src="js/app.js"></script>
@@ -217,23 +193,6 @@
 
         </div>
     </section>
-
-    <!-- Jquery Core Js -->
-    <script src="plugins/jquery/jquery.min.js"></script>
-
-    <!-- Bootstrap Core Js -->
-    <script src="plugins/bootstrap-3.3.7/js/bootstrap.js"></script>
-
-    <!-- Select Plugin Js -->
-    <script src="plugins/bootstrap-select/js/bootstrap-select.js"></script>
-
-    <!-- Slimscroll Plugin Js -->
-    <script src="plugins/jquery-slimscroll/jquery.slimscroll.js"></script>
-
-    <!-- Waves Effect Plugin Js -->
-    <script src="plugins/node-waves/waves.js"></script>
-
-    <!-- Morris Plugin Js -->
 
     <!-- Custom Js -->
     <script src="js/template/admin.js"></script>
