--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,6 +27,7 @@
 
     <!-- Custom Css -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/meuStyle.css" rel="stylesheet">
 
     <!--Libs-->
     <script src="js/lib/angular1-5.js"></script>
@@ -95,12 +96,12 @@
     <div class="overlay"></div>
     <!-- #END# Overlay For Sidebars -->
     <!-- Top Bar -->
-    <nav class="navbar">
+    <nav class="navbar  ">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="#/dashboard">STRONG ACTION</a>
+                <a class="navbar-brand" style="font-size: 2em" href="#/dashboard">STRONG<b>ACTION</b></a>
             </div>
         </div>
     </nav>
